--- a/templates/food_exp.html
+++ b/templates/food_exp.html
@@ -7,7 +7,7 @@
 </style>
 
 <div class ="container">
-    <form action="/main" method = "post">
+    <form action="/prediction" method = "post">
         <p><h2>Please enter your income(per week):</h2></p>
         <p><input type = "number"  step = "1" name = "income"></p>
         <p><input type = "submit" value = "Enter"></p>
