--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,12 @@
     <form action="/delete" method="post">
         <p><input type="submit" value="Delete Database"></p>
     </form>
+    <form action="/music" method="post">
+        <p><input type="submit" value="Music Generator"></p>
+    </form>
+    <form action="/video" method="post">
+        <p><input type="submit" value="/video Generator"></p>
+    </form>
     <form action="/food_exp" method="post">
         <p><input type="submit" value="Food Expenditure"></p>
     </form>
