--- a/templates/music.html
+++ b/templates/music.html
@@ -6,11 +6,10 @@
 </style>
 
 <div class="container">
-    <h1>You should spend {{r}} on your food per week.</h1>
-    <form action="/main" method="post">
-        <p><input type="submit" value="Main"></p>
+    <h1>Music : </h1>
+    <form action="/music_generator" method="post">
+        <p><input type = "text" name= "q"></p>
+        <p><input type="submit" value="Enter"></p>
     </form>
-    <form action="/end" method="post">
-        <p><input type="submit" value="End"></p>
-    </form>   
+
 </div>
