--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
         <p><input type="submit" value="Music Generator"></p>
     </form>
     <form action="/video" method="post">
-        <p><input type="submit" value="/video Generator"></p>
+        <p><input type="submit" value="Video Generator"></p>
     </form>
     <form action="/food_exp" method="post">
         <p><input type="submit" value="Food Expenditure"></p>
