--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,11 @@
         <p><input type = "submit" value = "Enter"></p>
 
     </form>
+    <button onclick="joke 1()">Joke1</button>
+    <script>
+        function showMessage(){
+            alert (“hy don't skeletons fight each other? They don't have the guts.”);
+        }
+    </script>
 </div>
 
