--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,10 @@
     <button onclick="joke 1()">Joke1</button>
     <script>
         function showMessage(){
-            alert (“hy don't skeletons fight each other? They don't have the guts.”);
+            alert (“Why don't skeletons fight each other? They don't have the guts.”);
         }
     </script>
+    <p><button onclick="joke2()">Joke 2</button></p>
+     <script src="{{url_for('static', filename=‘joke2.js')}}"></script>
 </div>
 
