--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,6 @@
         }
     </script>
     <p><button onclick="joke2()">Joke 2</button></p>
-     <script src="{{url_for('static', filename=‘joke2.js')}}"></script>
+     <script src="{{url_for('static', filename='joke2.js')}}"></script>
 </div>
 
